--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,6 @@ title: "Personal Portfolio"
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+about: 
+  template: jolla
+  
