--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,12 @@
 ---
 title: "Personal Portfolio"
+
+about: jolla
+image: Shalan.jpg
+html:
+  theme: minty
+  website:
+  twitter-card: true
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-about: 
-  template: jolla
-  
+"Kindness creates an endless ripple that comes back to you'
