Commiting another visualisation 4

--- a/Visualisation.qmd
+++ b/Visualisation.qmd
@@ -41,4 +41,20 @@ tuition_cost %>%
   coord_flip()
 ```
 
+
+This is visualization of the students of the University of Phoenix-Arizona. This data tries to demonstrate the percentage of races in the University of Phoenix-Arizona.
+
 Credit to Alex Cookson
+
+```{r, message=FALSE, warning=FALSE}
+ggplot(tuition_cost, aes(state)) + geom_bar(fill="pink", color="black",binwidth =1)  
+
+```
+This bar chart shows a display of tuition cost in several states.
+```{r, message=FALSE, warning=FALSE}
+ggplot(tuition_cost, aes(type)) + geom_bar(fill="pink", color="blue",binwidth =20)  
+
+```
+
+This bar chart shows a display of number various types of instituitions ; Private, for profit and Public 
+
