--- a/Visualisation.qmd
+++ b/Visualisation.qmd
@@ -24,24 +24,60 @@ diversity_school <- readr::read_csv('https://raw.githubusercontent.com/rfordatas
 
 Data Exploration
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-tuition_cost
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+install.packages("gtExtras")
+library(gt)
+```
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+tuition_cost %>%gt()
+ 
+```
+
+This representation is made up of three data sets. Firstly a data set which represents the tuition cost of several colleges in several states in the USA, the degree length if its 2 or 4 years, state code and the type of instituitions be public, private or Non-Profit.
+
+Estimate of Students in Public Private and Non-Profit Universities
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+ggplot(tuition_cost, aes(type)) +
+geom_bar(fill = "#00abff")
+ 
+```
+
+An estimate on the Number of Universities with 2 or 4 programs.
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+ggplot(tuition_cost, aes(degree_length)) +
+geom_bar(fill = "Pink")
+
+```
+The table below shows the diverse students of different states.
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+diversity_school%>%gt()
+
+```
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+ pd <- ggplot(data=diversity_school, aes(state))
+pd  + geom_bar(fill="pink")
+
+```
+
+This bar chart shows the nymber ofdiverse students in several states.
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE}
+#number of black students in Florida
+library(dplyr)
+ filter (diversity_school,  (state == "Florida" & category=="Black"))%>%
+ ggplot(aes(state))+ geom_bar()
 
 
 ```
 
-Here is visual table of the tuition cost data set. Here there is a list of colleges and their corresponding states in the US
+Number of Black Students in FLorida.
 
 ```{r}
 
-```
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-diversity_school
-
-```
-
-```{}
 ```
 
 ```{r,echo=FALSE, message=FALSE, warning=FALSE}
@@ -64,21 +100,3 @@ tuition_cost %>%
 This is visualization of the students of the University of Phoenix-Arizona. This data tries to demonstrate the percentage of races in the University of Phoenix-Arizona.
 
 Credit to Alex Cookson
-
-```{r, message=FALSE, warning=FALSE}
-ggplot(tuition_cost, aes(state)) + geom_bar(fill="pink", color="black",binwidth =1)  
-
-```
-
-This bar chart shows a display of tuition cost in several states.
-
-```{r, message=FALSE, warning=FALSE}
-ggplot(tuition_cost, aes(type)) + geom_bar(fill="pink", color="blue",binwidth =20)  
-
-```
-
-This bar chart shows a display of number various types of instituitions ; Private, for profit and Public
-
-```{r  message=FALSE, warning=FALSE}
-
-```
